Update StarDust so that it works properly with master. Please report any issues that occur to the aurora-dev IRC channel on freenode.

--- a/StarDust.ini
+++ b/StarDust.ini
@@ -1,7 +1,5 @@
-;;[Handlers]
-;;	CurrencyHandler = StarDust
-;;[Currency]
-;;	Module = StarDust
+[Currency]
+	Module = StarDust
 [StarDustCurrency]
 	;; PayPal, or Dust
 	CurrencyModule = Dust
@@ -10,7 +8,13 @@
 	;; Port used for currency post handler
 	CurrencyInHandlerPort = 8007
 	
-	;; Banker uuid - THIS NEEDS SET AND ENSURE YOU GIVE HIM MONEY IN STARTDUST_CURRENCY TABLE
+	;; Allow the banker to have no money and still be able to transfer money to others
+	;; Allows users to not have to set up the BankerUUID and manually give him money
+	AllowBankerToHaveNoMoney = true
+	
+	;; Banker uuid
+	;; If you didn't set AllowBankerTohaveNoMoney,
+	;; THIS NEEDS SET AND ENSURE YOU GIVE HIM MONEY IN STARTDUST_CURRENCY TABLE
 	BankerPrincipalID = 00000000-0000-0000-0000-000000000000
 	
 	;; URIs
@@ -22,7 +26,7 @@
 	AutoApplyCurrency = false
 	;; After a user request to purchase currency this message will be sent to them.
 	;; {0} purchase id
-	AfterCurrencyPurchaseMessage = Please goto here to finish your currency purchase - http://localhost/index.php?page=prepaypal&btn=webui_menu_item_getcurrency&purchase_id={0}
+	AfterCurrencyPurchaseMessage = "Please goto here to finish your currency purchase - http://localhost/index.php?page=prepaypal&btn=webui_menu_item_getcurrency&purchase_id={0}"
 	;; purchase currency
 	RealCurrencyConversionFactor = 500
 	;; Additional Percentage to charge default 2.91%
