Edited StarDust.ini via GitHub

--- a/StarDust.ini
+++ b/StarDust.ini
@@ -51,11 +51,11 @@
 	; PriceParcelRent = 1
 	; PriceObjectScaleFactor = 10
 	; PriceObjectRent = 1
-	; TeleportPriceExponent = 2f
+	; TeleportPriceExponent = 2
 	; TeleportMinPrice = 2
 	; PriceRentLight = 5
 	; PriceUpload = 0
-	; PriceParcelClaimFactor = 1f
+	; PriceParcelClaimFactor = 1
 	; PriceParcelClaim = 1
 	; PricePublicObjectDelete = 4
 	; PricePublicObjectDecay = 4
