Fully restructured Stardust. Added configuable restrictions to prevent fraud See README for details. Added ATM machine scripts for transfering Currency between grids (See Scripts/ATM_Machines/How2User.txt for details).

--- a/StarDust.ini
+++ b/StarDust.ini
@@ -42,6 +42,16 @@
 	
 	;;;;;;;;;Purchase Land;;;;;;;;;;;;;;;;;
 	MessgeBeforeBuyLand = Please ensure you are standing on the land you want to purchase.
+		
+	;;;;;;;;;Restrictions;;;;;;;;;;;;;;;;;
+	;; number of hours money is restricted after purchase
+	RestrictMoneyHoursAfterPurchase=24
+	;; amount of money they are allowed to spend in restriction
+	RestrictMoneyCanSpendAfterPurchase=1500
+	;; Max Amount purchase pieriod 
+	MaxAmountPurchaseDays=30
+	;; Max amount of money they can purcahse
+	MaxAmountPurchase=50000
 	
 	;;;;;;other values with defaults;;;;;;;
 	; ObjectCapacity = 0
