Changes to bring stardust up to date with currency changes in aurora.

--- a/StarDust.ini
+++ b/StarDust.ini
@@ -52,6 +52,8 @@
 	MaxAmountPurchaseDays=30
 	;; Max amount of money they can purcahse
 	MaxAmountPurchase=50000
+	;; When someone recieves money, should we display a message? // not finished yet
+	DisplayPayMessages=true
 	
 	;;;;;;other values with defaults;;;;;;;
 	; ObjectCapacity = 0
