Added Stipends and started work on new ATM capabilities. ATM is not finished yet.

--- a/StarDust.ini
+++ b/StarDust.ini
@@ -17,6 +17,18 @@
 	;; THIS NEEDS SET AND ENSURE YOU GIVE HIM MONEY IN STARTDUST_CURRENCY TABLE
 	BankerPrincipalID = 00000000-0000-0000-0000-000000000000
 	
+	;; use this user to be paid when exporting money to another grid
+	;; if AllowExportOfTier is false then will not allow tier money to pay this avatar
+	ExporterPrincipalID = 00000000-0000-0000-0000-000000000000
+	
+	;; ATM in other grids should use this password
+	ATMPasswords = 
+	;; Banned IP Addresses for ATM comms; seperate ips by ";"
+	ATMIPBan = 
+	;; Allowed IP Address for ATM comms; if nothing all IP addresses are allowed; seperate ips by ";" 
+	ATMIPAllow = 
+	;; ATM ULR Addon; this is used in the url that the atm uses to connecto to the grid
+	ATMGridURL = 
 	;; URIs
 	ErrorURI = http://localhost:8002/
 	UpgradeMembershipUri = http://localhost:8002/
@@ -42,7 +54,7 @@
 	
 	;;;;;;;;;Purchase Land;;;;;;;;;;;;;;;;;
 	MessgeBeforeBuyLand = Please ensure you are standing on the land you want to purchase.
-		
+	
 	;;;;;;;;;Restrictions;;;;;;;;;;;;;;;;;
 	;; number of hours money is restricted after purchase
 	RestrictMoneyHoursAfterPurchase=24
@@ -52,31 +64,42 @@
 	MaxAmountPurchaseDays=30
 	;; Max amount of money they can purcahse
 	MaxAmountPurchase=50000
-	;; When someone recieves money, should we display a message? // not finished yet
+	;; When someone recieves money, should we display a message?
 	DisplayPayMessages=true
 	
 	;;;;;;other values with defaults;;;;;;;
 	; ObjectCapacity = 0
 	; MinFundsBeforeRefresh = 5
-	; Stipend = 0
 	; PriceGroupCreate = 0
 	; PriceParcelRent = 1
 	; PriceObjectScaleFactor = 10
 	; PriceObjectRent = 1
-	; TeleportPriceExponent = 2
+	; TeleportPriceExponent = 2f
 	; TeleportMinPrice = 2
 	; PriceRentLight = 5
 	; PriceUpload = 0
-	; PriceParcelClaimFactor = 1
+	; PriceParcelClaimFactor = 1f
 	; PriceParcelClaim = 1
 	; PricePublicObjectDelete = 4
 	; PricePublicObjectDecay = 4
 	; PriceObjectClaim = 10
 	; PriceEnergyUnit = 100
-	
-	
 	;; paypal module 
 	AllowGridEmails = false
 	AllowGroups = false
-        
-[PayPal Users]
+    
+	;;Should we give out stipends?
+	GiveStipends = false
+	Stipend = 0
+	;; only send them to premiom users?
+	StipendsPremiumOnly = false
+	;; second,minute,hours,days,weeks,months,years,decades,centuries,millennium,Kilenniums,Centrenniums,Megaannum
+	StipendsEveryType = months
+	StipendsEvery = 1
+	;; you might want to do this the first time it runs.. let it run at least 30 minutes
+	;; if you change StipendsPremiumOnly to true you will want to run this as well
+	StipendsLoadOldUsers = false
+	;; can someone cash out their stipends?
+	AllowExportOfStipends = true
+	;; should stipends only be given when a user is logged in?
+	GiveStipendsOnlyWhenLoggedIn = false
