Add the readme cleanup and better configs (plus a few new console commands "money set", "money get", "money add"). Make it easier to setup Stardust. NOTE: Only the httpserver branch version is in here now.

--- a/Configs/StarDust.ini
+++ b/Configs/StarDust.ini
@@ -1,39 +1,40 @@
 [Currency]
 	Module = StarDust
 [StarDustCurrency]
-	;; PayPal, or Dust
+	;; Dust if you want to just play money, paypal if you wish to configure the grid to be able to accept paypal payments
+	;; Default is Dust
 	CurrencyModule = Dust
-	;; 
+	
+	;; Local only
 	CurrencyConnector = Local
 	;; Port used for currency post handler
 	CurrencyInHandlerPort = 8007
 	
 	;; Allow the banker to have no money and still be able to transfer money to others
-	;; Allows users to not have to set up the BankerUUID and manually give him money
+	;; If set to true, allows users to not have to set up the BankerUUID and manually give him money
+	;; Default is true
 	AllowBankerToHaveNoMoney = true
 	
 	;; Banker uuid
 	;; If you didn't set AllowBankerTohaveNoMoney,
-	;; THIS NEEDS SET AND ENSURE YOU GIVE HIM MONEY IN STARTDUST_CURRENCY TABLE
+	;; This NEEDS to be set, and you will need to give the banker money via the console command "money set"
+	;; Default is "00000000-0000-0000-0000-000000000000"
 	BankerPrincipalID = 00000000-0000-0000-0000-000000000000
 	
-	;; use this user to be paid when exporting money to another grid
+	;; Use this user to be paid when exporting money to another grid 
 	;; if AllowExportOfTier is false then will not allow tier money to pay this avatar
+	;; This option is advanced, and is not normally needed to be changed
+	;; Default is "00000000-0000-0000-0000-000000000000"
 	ExporterPrincipalID = 00000000-0000-0000-0000-000000000000
 	
-	;; ATM in other grids should use this password
-	ATMPasswords = 
-	;; Banned IP Addresses for ATM comms; seperate ips by ";"
-	ATMIPBan = 
-	;; Allowed IP Address for ATM comms; if nothing all IP addresses are allowed; seperate ips by ";" 
-	ATMIPAllow = 
-	;; ATM ULR Addon; this is used in the url that the atm uses to connecto to the grid
-	ATMGridURL = 
 	;; URIs
 	ErrorURI = http://localhost:8002/
 	UpgradeMembershipUri = http://localhost:8002/
 	
-	;;;;;;;;;Purchase currecncy;;;;;;;;;;;
+	;;;
+	;;; Purchase currecncy
+	;;;
+	
 	;; Should purchased currency in world be automatically applied?
 	AutoApplyCurrency = false
 	;; After a user request to purchase currency this message will be sent to them.
@@ -47,24 +48,39 @@
 	;; Addition amount to charge default $0.30
 	;; Note, this value is divided by 100
 	AdditionAmount = 30
+	
+	;;;
+	;;; Paypal Configuration (only if Currency is set to paypal)
+	;;;
+	
 	;; For information on token goto - see notes
 	;; https://cms.paypal.com/us/cgi-bin/?cmd=_render-content&content_ID=developer/howto_html_paymentdatatransfer
 	PayPalAuthToken = xxxxx-xxxxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxx-x-x_xxxxxxxxxxxx
 	PayPalURL = www.sandbox.paypal.com
 	
-	;;;;;;;;;Purchase Land;;;;;;;;;;;;;;;;;
+	;;;
+	;;; Purchase Land
+	;;;
 	MessgeBeforeBuyLand = Please ensure you are standing on the land you want to purchase.
 	
-	;;;;;;;;;Restrictions;;;;;;;;;;;;;;;;;
-	;; number of hours money is restricted after purchase
+	;;;
+	;;; Restrictions (read README for more information about this)
+	;;;
+	
+	;; Number of hours money is restricted after purchase
+	;; Default is 24
 	RestrictMoneyHoursAfterPurchase=24
-	;; amount of money they are allowed to spend in restriction
+	;; Amount of money they are allowed to spend in restriction
+	;; Default is 1500
 	RestrictMoneyCanSpendAfterPurchase=1500
-	;; Max Amount purchase pieriod 
+	;; Max Amount purchase period 
+	;; Default is 30
 	MaxAmountPurchaseDays=30
 	;; Max amount of money they can purcahse
+	;; Default is 50000
 	MaxAmountPurchase=50000
 	;; When someone recieves money, should we display a message?
+	;; Default is true
 	DisplayPayMessages=true
 	
 	;;;;;;other values with defaults;;;;;;;
@@ -89,17 +105,41 @@
 	AllowGroups = false
     
 	;;Should we give out stipends?
+	;; Default is false
 	GiveStipends = false
+	;; Stipend amount to give
+	;; Default is 0
 	Stipend = 0
-	;; only send them to premiom users?
+	;; Only send stipends to premium users?
+	;; Default is false
 	StipendsPremiumOnly = false
-	;; second,minute,hours,days,weeks,months,years,decades,centuries,millennium,Kilenniums,Centrenniums,Megaannum
-	StipendsEveryType = months
+	;; Amount of time before stipends are given out
+	;; Valid values are: second,minute,hours,days,weeks,months,years,decades,centuries,millennium,Kilenniums,Centrenniums,Megaannum
+	;; Default is weeks
+	StipendsEveryType = weeks
+	;; Number of type (set above) before a stipid is given out
+	;; Default is 1
 	StipendsEvery = 1
-	;; you might want to do this the first time it runs.. let it run at least 30 minutes
-	;; if you change StipendsPremiumOnly to true you will want to run this as well
+	;; You might want to do this the first time it runs.. let it run at least 30 minutes
+	;; If you change StipendsPremiumOnly to true you will want to run this as well
+	;; Default is false
 	StipendsLoadOldUsers = false
-	;; can someone cash out their stipends?
+	;; Can someone cash out their stipends?
+	;; Default is true
 	AllowExportOfStipends = true
-	;; should stipends only be given when a user is logged in?
+	;; Should stipends only be given when a user is logged in?
+	;; Default is false
 	GiveStipendsOnlyWhenLoggedIn = false
+	
+	;;;
+	;;; ATM Configuration - Advanced
+	;;;
+	
+	;; ATM in other grids should use this password
+	ATMPasswords = 
+	;; Banned IP Addresses for ATM comms; seperate ips by ";"
+	ATMIPBan = 
+	;; Allowed IP Address for ATM comms; if nothing all IP addresses are allowed; seperate ips by ";" 
+	ATMIPAllow = 
+	;; ATM ULR Addon; this is used in the url that the atm uses to connecto to the grid
+	ATMGridURL = 
